# godot-open-telemetry

./: .gitignore  CMakeLists.txt  README.md  SCsub  justfile  open_telemetry.cpp  open_telemetry.h  opentelemetry.gdextension  opentelemetry_wrapper.cpp  opentelemetry_wrapper.h  register_types.cpp
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: ci.yml
